--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,6 +31,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- <script src="./js/main.min.js"></script> -->
+    <script src="./js/main.min.js"></script>
   </body>
 </html>
